Realizadas as seguintes alterações no projeto: atualização das imagens e reorganização do projeto

--- a/FeedControl/cidades.html
+++ b/FeedControl/cidades.html
@@ -57,53 +57,16 @@
                             <a href="vendedores.html">Vendedores</a>
                         </li>
                         <li>
-                            <a href="cidades.html">Cidades Atendidas</a>
+                            <a href="cidades.hmtl">Cidades Atendidas</a>
                         </li>
                     </ul>
-
-
-
                 </div>
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container -->
         </nav>
 
-        <!-- Page Content -->
         <div class="container" >
-
-            <div class="row">
-
-                <div class="col-sm-6 col-lg-6 col-md-6">
-                    <form method="post" onsubmit="validaForm(); return false;" class="form">
-                        <p class="name">
-                            <label for="name">Nome</label>
-                            <input type="text" placeholder="Seu Nome" />
-                        </p>
-                        <p class="email">
-                            <label for="email">E-mail</label>
-                            <input type="text" placeholder="mail@exemplo.com.br" />
-                        </p>
-                        <p class="text">
-                            <label for="mensagem">Mensagem</label>
-                            <textarea placeholder="Escreva sua mensagem" /></textarea>
-                        </p>
-                        <p class="submit">
-                            <input type="submit" value="Enviar" />
-                        </p>
-                    </form>
-
-                </div>
-                <div class="col-sm-6 col-lg-6 col-md-6">
-                    <h1>
-                        Telefone: (49)3222-6541
-                        Email:contato@contato.com
-
-                    </h1>
-                </div>
-            </div>
-            <br>
-            <br>
             <div class="row">
                 <div class="col-sm-1 col-lg-1 col-md-1">
                     <footer>
@@ -113,6 +76,14 @@
                 </div>
             </div>
         </div>
+        <!-- Page Content -->
+        <div class="container">
+            <div class="col-md-9">
+            </div>
+        </div>
+
+
+
 
         <!-- jQuery -->
         <script src="js/jquery.js"></script>
