--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -47,17 +47,17 @@
                         <li>
                             <a href="sobre.html">Empresa</a>
                         </li>
-                        <li>
+                       <!-- <li>
                             <a href="servicos.html">Serviços</a>
-                        </li>
+                        </li>-->
                         <li>
                             <a href="contato.html">Contato</a>
                         </li>
                         <li>
-                            <a href="#">Vendedores</a>
+                            <a href="vendedores.html">Vendedores</a>
                         </li>
                         <li>
-                            <a href="#">Cidades Atendidas</a>
+                            <a href="cidades.html">Cidades Atendidas</a>
                         </li>
                     </ul>
                 </div>
@@ -116,7 +116,7 @@
 
                         <div class="col-sm-4 col-lg-4 col-md-4">
                             <div class="thumbnail">
-                                <img src="img/cachorro4.jpg" alt="">
+                                <img src="img/cao_adulto.jpg" alt="">
                                 <div class="caption">           
                                     <h4><a href="#">Alimentos para Cães Adultos</a>
                                     </h4>
