--- a/FeedControl/sobre.html
+++ b/FeedControl/sobre.html
@@ -47,17 +47,17 @@
                         <li>
                             <a href="sobre.html">Empresa</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="servicos.html">Serviços</a>
-                        </li>
+                        </li>-->
                         <li>
                             <a href="contato.html">Contato</a>
                         </li>
                         <li>
-                            <a href="#">Vendedores</a>
+                            <a href="vendedores.html">Vendedores</a>
                         </li>
                         <li>
-                            <a href="#">Cidades Atendidas</a>
+                            <a href="cidades.html">Cidades Atendidas</a>
                         </li>
                     </ul>
                 </div>
@@ -134,7 +134,7 @@
 
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
-        <>
+        
 
     </body>
 
