--- a/FeedControl/vendedores.html
+++ b/FeedControl/vendedores.html
@@ -60,9 +60,6 @@
                             <a href="cidades.html">Cidades Atendidas</a>
                         </li>
                     </ul>
-
-
-
                 </div>
                 <!-- /.navbar-collapse -->
             </div>
@@ -70,55 +67,90 @@
         </nav>
 
         <!-- Page Content -->
-        <div class="container" >
 
-            <div class="row">
+        <div class="row carousel-holder">
 
-                <div class="col-sm-6 col-lg-6 col-md-6">
-                    <form method="post" onsubmit="validaForm(); return false;" class="form">
-                        <p class="name">
-                            <label for="name">Nome</label>
-                            <input type="text" placeholder="Seu Nome" />
-                        </p>
-                        <p class="email">
-                            <label for="email">E-mail</label>
-                            <input type="text" placeholder="mail@exemplo.com.br" />
-                        </p>
-                        <p class="text">
-                            <label for="mensagem">Mensagem</label>
-                            <textarea placeholder="Escreva sua mensagem" /></textarea>
-                        </p>
-                        <p class="submit">
-                            <input type="submit" value="Enviar" />
-                        </p>
-                    </form>
+            <div class="col-md-12">
+                <img class="slide-image" src="img/equipe.jpg" >
 
-                </div>
-                <div class="col-sm-6 col-lg-6 col-md-6">
-                    <h1>
-                        Telefone: (49)3222-6541
-                        Email:contato@contato.com
-
-                    </h1>
-                </div>
             </div>
-            <br>
-            <br>
-            <div class="row">
-                <div class="col-sm-1 col-lg-1 col-md-1">
-                    <footer>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3528.7025251825326!2d-50.34569268452909!3d-27.81892288274585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e01f56a7d7881f%3A0x3b105f266fa26288!2sR.+Val%C3%A9rio+Antunes%2C+1283+-+Copacabana%2C+Lages+-+SC%2C+88504-310!5e0!3m2!1spt-BR!2sbr!4v1492437884328" width="1100" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </footer>
 
-                </div>
-            </div>
         </div>
 
-        <!-- jQuery -->
-        <script src="js/jquery.js"></script>
+        <div class="container">
 
-        <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
+
+            <div class="col-md-9">
+
+                <h1>Equipe de Vendedores</h1>
+
+                <img>
+            </div>
+        </div>
+        <div class="row">
+
+            <div class="col-sm-4 col-lg-4 col-md-4">
+                <div class="thumbnail">
+                    <img src="img/cachorro4.jpg" alt="">
+                    <div class="caption" >        
+
+                    </div>
+                </div>
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail">
+                        <img src="img/cachorro5.jpg" alt="">
+                        <div class="caption">                              
+
+                        </div>                            
+                    </div>
+                </div>
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail">
+                        <img src="img/cachorro5.jpg" alt="">
+                        <div class="caption">                              
+
+                        </div>                            
+                    </div>
+                </div>
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail">
+                        <img src="img/cachorro5.jpg" alt="">
+                        <div class="caption">                              
+
+                        </div>                            
+                    </div>
+                </div>
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail">
+                        <img src="img/cachorro5.jpg" alt="">
+                        <div class="caption">                              
+
+                        </div>                            
+                    </div>
+                </div>
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail">
+                        <img src="img/cachorro5.jpg" alt="">
+                        <div class="caption">                              
+
+                        </div>                            
+                    </div>
+                </div>
+            </div>
+
+
+
+
+            <!-- jQuery -->
+            <script src="js/jquery.js"></script>
+
+            <!-- Bootstrap Core JavaScript -->
+            <script src="js/bootstrap.min.js"></script>
 
     </body>
 
