Terminei os vendedores, coloquei fotos novas, fiz paginas de gatos e cachorros.

--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -74,8 +74,8 @@
                 <div class="col-md-3">
                     <p class="lead">Categoria</p>
                     <div class="list-group">
-                        <a href="#" class="list-group-item">Gato</a>
-                        <a href="#" class="list-group-item">Cachorro</a>            
+                        <a href="gatos.html" class="list-group-item">Gato</a>
+                        <a href="cachorros.html" class="list-group-item">Cachorro</a>            
                     </div>
                 </div>
 
