--- a/FeedControl/filhote.html
+++ b/FeedControl/filhote.html
@@ -83,69 +83,41 @@
             </div>
         </div>
 
-
-
-        <div class="container">
-            <div class="col-md-9">
-                <span class="letras"> Por fase da </span>
-                <br>
-                <span class="letrasF"> VIDA </span>
-
-                <!-- -->            
-                <br>
-                <br>
-            </div>
-        </div>
-
-
-
-
         <div class="container">
 
             <div class="row">
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/cachorroSenior.png" alt="">
-                        </div>
-                        <div class="caption" >        
-                            <p> <a href="senior.html" target="_self" class="letrasCachorros">Sênior</a></p>
 
-                        </div>
+                        <p class="tituloFilhoteG">GUABI NATURAL</p>
+                        <p class="subtituloFilhoteG"><b>CÃES FILHOTES GRANDES E GIGANTES</b></p>
+                        <div class="racao">
+                            <img src="img/racaofilhoteGrandes.png" alt="">
+                        </div>                      
                     </div>
                 </div>
 
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail " style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/cachorroAdulto.png" alt="">
-                        </div>
-
-                        <div class="caption">
-                            <p> <a href="adulto.html" target="_self" class="letrasCachorros">Adulto</a></p>
-
-                        </div>                            
+                        <p class="tituloFilhoteM">GUABI NATURAL</p>
+                        <p class="subtituloFilhoteM"><b>CÃES FILHOTES PORTE MÉDIO</b></p>
+                        <div class="racao">
+                            <img src="img/racaofilhoteMedios.png" alt="">
+                        </div>                         
                     </div>
-                </div>
+                </div> 
 
                 <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/cachorroFilhote.png" alt="">
-                        </div>
-                        <div class="caption">  
-                            <p ><a href="filhote.html" target="_self" class="letrasCachorros">Filhote</a></p>
-
-                        </div>                            
+                    <div class="thumbnail " style="border: 0;">
+                        <p class="tituloFilhoteMini">GUABI NATURAL</p>
+                        <p class="subtituloFilhoteMini"><b>CÃES FILHOTES INDOOR PORTE MINI E PEQUENOS</b></p>
+                        <div class="racao">
+                            <img src="img/racaofilhoteMini.png" alt="">
+                        </div>                         
                     </div>
-                </div>              
+                </div>  
             </div>
         </div>
-
-
-
-
-
 
         <!-- jQuery -->
         <script src="js/jquery.js"></script>
