--- a/FeedControl/senior.html
+++ b/FeedControl/senior.html
@@ -83,69 +83,31 @@
             </div>
         </div>
 
-
-
-        <div class="container">
-            <div class="col-md-9">
-                <span class="letras"> Por fase da </span>
-                <br>
-                <span class="letrasF"> VIDA </span>
-
-                <!-- -->            
-                <br>
-                <br>
-            </div>
-        </div>
-
-
-
-
         <div class="container">
 
             <div class="row">
-                <div class="col-sm-4 col-lg-4 col-md-4">
+                <div class="col-sm-6 col-lg-6 col-md-6">
                     <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/cachorroSenior.png" alt="">
-                        </div>
-                        <div class="caption" >        
-                            <p> <a href="senior.html" target="_self" class="letrasCachorros">Sênior</a></p>
-
-                        </div>
+                        
+                        <p class="titulo">GUABI NATURAL</p>
+                        <p class="subtitulo"><b>CÃES SÊNIOR GRANDES E GIGANTES</b></p>
+                        <div class="racao">
+                            <img src="img/racaoSenior.png" alt="">
+                        </div>                      
                     </div>
                 </div>
 
-                <div class="col-sm-4 col-lg-4 col-md-4">
+                <div class="col-sm-6 col-lg-6 col-md-6">
                     <div class="thumbnail " style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/cachorroAdulto.png" alt="">
-                        </div>
-
-                        <div class="caption">
-                            <p> <a href="adulto.html" target="_self" class="letrasCachorros">Adulto</a></p>
-
-                        </div>                            
+                        <p class="tituloSenior">GUABI NATURAL</p>
+                        <p class="subtituloSenior"><b>CÃES SÊNIOR MINI, PEQUENOS E MÉDIOS</b></p>
+                        <div class="racao">
+                            <img src="img/racaoSeniorMini.png" alt="">
+                        </div>                         
                     </div>
-                </div>
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/cachorroFilhote.png" alt="">
-                        </div>
-                        <div class="caption">  
-                            <p ><a href="filhote.html" target="_self" class="letrasCachorros">Filhote</a></p>
-
-                        </div>                            
-                    </div>
-                </div>              
+                </div>                       
             </div>
         </div>
-
-
-
-
-
 
         <!-- jQuery -->
         <script src="js/jquery.js"></script>
