comecei fazer a parte dos gatos

--- a/FeedControl/gatos.html
+++ b/FeedControl/gatos.html
@@ -65,15 +65,64 @@
         </div>
         <!-- /.container -->
     </nav>
+    
+    <div class="row carousel-holder">
 
-    <!-- Page Content -->
-    <div class="container">
-   
-            <div class="col-md-9">
+            <div class="col-md-12">
+                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
-                
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img class="slide-image" src="img/gatobanner.png" alt="">
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
         </div>
-    </div>
+
+     <div class="container">
+
+            <div class="row">
+                <div class="col-sm-6 col-lg-6 col-md-6">
+                    <div class="thumbnail" style="border: 0;">
+                        <div class="thumb-vendedor">
+                            <img src="img/cachorroSenior.png" alt="">
+                        </div>
+                        <div class="caption" >        
+                            <p> <a href="senior.html" target="_self" class="letrasCachorros">Sênior</a></p>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail " style="border: 0;">
+                        <div class="thumb-vendedor">
+                            <img src="img/cachorroAdulto.png" alt="">
+                        </div>
+
+                        <div class="caption">
+                            <p> <a href="adulto.html" target="_self" class="letrasCachorros">Adulto</a></p>
+
+                        </div>                            
+                    </div>
+                </div>
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail" style="border: 0;">
+                        <div class="thumb-vendedor">
+                            <img src="img/cachorroFilhote.png" alt="">
+                        </div>
+                        <div class="caption">  
+                            <p ><a href="filhote.html" target="_self" class="letrasCachorros">Filhote</a></p>
+
+                        </div>                            
+                    </div>
+                </div>              
+            </div>
+        </div>
 
 
   
