--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -121,7 +121,7 @@
                             <div class="thumbnail">
                                 <img src="img/cao_adulto.jpg" alt="">
                                 <div class="caption">           
-                                    <h4><a href="#">Alimentos para Cães Adultos</a>
+                                    <h4><a href="adulto.html">Alimentos para Cães Adultos</a>
                                     </h4>
                                     <p>Ração para cães adultos</div>
 
@@ -132,7 +132,7 @@
                             <div class="thumbnail">
                                 <img src="img/cao_filhote.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="#">Alimentos para Cães Filhotes</a>
+                                    <h4><a href="filhote.html">Alimentos para Cães Filhotes</a>
                                     </h4>
                                     <p>Ração para cães filhotes</p>
                                 </div>                            
@@ -143,7 +143,7 @@
                             <div class="thumbnail">
                                 <img src="img/cao_senior.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="#">Alimentos para Cães Senior</a>
+                                    <h4><a href="senior.html">Alimentos para Cães Senior</a>
                                     </h4>
                                     <p>Ração para cães senior</p>
                                 </div>                            
