--- a/FeedControl/cachorros.html
+++ b/FeedControl/cachorros.html
@@ -74,7 +74,7 @@
 
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="slide-image" src="img/cachorrobanner.png" alt="">
+                            <img class="slide" src="img/cachorrobanner.png" alt="">
                         </div>
 
                     </div>
@@ -82,22 +82,6 @@
 
             </div>
         </div>
-
-
-
-        <div class="container">
-            <div class="col-md-9">
-                <span class="letras"> Por fase da </span>
-                <br>
-                <span class="letrasF"> VIDA </span>
-
-                <!-- -->            
-                <br>
-                <br>
-            </div>
-        </div>
-
-
 
 
         <div class="container">
