Página de gatos esta quase pronta, só falta fazer descrição exatas da rações

--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -95,13 +95,13 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="item active">
-                                        <img class="slide-image" src="img/cachorro1.jpg" alt="">
+                                        <img class="slide-image" src="img/banner1.jpg" alt="">
                                     </div>
                                     <div class="item">
-                                        <img class="slide-image" src="img/cachorro2.jpg" alt="">
+                                        <img class="slide-image" src="img/banner2.jpg" alt="">
                                     </div>
                                     <div class="item">
-                                        <img class="slide-image" src="img/cachorro3.jpg" alt="">
+                                        <img class="slide-image" src="img/banner3.jpg" alt="">
                                     </div>
                                 </div>
                                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
@@ -188,19 +188,6 @@
             </div>
 
         </div>
-
-
-        <!-- /.container -->
-
-        <div class="container">
-
-            <hr>
-
-
-
-        </div>
-        <!-- /.container -->
-
         <!-- jQuery -->
         <script src="js/jquery.js"></script>
 
