adicionada novas paginas(acho que me empolguei adicionando paginas).

--- a/FeedControl/cachorros.html
+++ b/FeedControl/cachorros.html
@@ -96,7 +96,7 @@
                             <img src="img/cachorroSenior.png" alt="">
                         </div>
                         <div class="caption" >        
-                            <p> <a href="senior.html" target="_self" class="letrasCachorros">Sênior</a></p>
+                            <p> <a href="seniorGranPlus.html" target="_self" class="letrasGran">Sênior</a></p>
 
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                         </div>
 
                         <div class="caption">
-                            <p> <a href="adulto.html" target="_self" class="letrasCachorros">Adulto</a></p>
+                            <p> <a href="adultoGranPlus.html" target="_self" class="letrasGran">Adulto</a></p>
 
                         </div>                            
                     </div>
@@ -121,7 +121,7 @@
                             <img src="img/cachorroFilhote.png" alt="">
                         </div>
                         <div class="caption">  
-                            <p ><a href="filhote.html" target="_self" class="letrasCachorros">Filhote</a></p>
+                            <p ><a href="filhoteGranPlus.html" target="_self" class="letrasGran">Filhote</a></p>
 
                         </div>                            
                     </div>
