--- a/FeedControl/filhote.html
+++ b/FeedControl/filhote.html
@@ -74,7 +74,7 @@
 
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="slide-image" src="img/cachorrobanner.png" alt="">
+                            <img class="banner" src="img/cachorrobanner.png" alt="">
                         </div>
 
                     </div>
@@ -116,7 +116,7 @@
                         </div>                         
                     </div>
                 </div>  
-            </div>
+            </div>            
         </div>
 
         <!-- jQuery -->
