--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -75,9 +75,17 @@
             <div class="row">
 
                 <div class="col-md-3">
-                    <p class="lead">Categoria</p>
+                    <p class="lead">Catálogos de produtos</p>
                     <div class="list-group">
-                        <a href="gatos.html" class="list-group-item">Gato</a>
+                        <a href="cachorrosEGato.html" class="list-group-item">Gran Plus </a>
+                        <a href="cachorrosEGatoGuabi.html" class="list-group-item">Guabi Natural</a>
+                        <a href="cachorrosEGato.html" class="list-group-item">Sabor & Vida</a>
+                        <a href="cachorrosEGato.html" class="list-group-item">Faro</a>
+                        <a href="cachorrosEGato.html" class="list-group-item">Herói</a>
+                        <a href="cachorrosEGato.html" class="list-group-item">Biriba</a>
+                        <a href="cachorrosEGato.html" class="list-group-item">Fiel</a>
+                       
+                        
                         <a href="cachorros.html" class="list-group-item">Cachorro</a>            
                     </div>
                 </div>
@@ -154,7 +162,7 @@
                             <div class="thumbnail">
                                 <img src="img/gato_adulto.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="#">Alimentos para Gatos Adultos</a>
+                                    <h4><a href="gatosguabi.html">Alimentos para Gatos Adultos</a>
                                     </h4>
                                     <p>Ração para gatos adultos</p>
                                 </div>                            
@@ -165,7 +173,7 @@
                             <div class="thumbnail">
                                 <img src="img/gato_filhote.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="#">Alimentos para Gatos Filhotes</a>
+                                    <h4><a href="gatosguabi.html">Alimentos para Gatos Filhotes</a>
                                     </h4>
                                     <p>Ração para gatos filhotes</p>
                                 </div>                            
@@ -176,7 +184,7 @@
                             <div class="thumbnail">
                                 <img src="img/gato_senior.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="#">Alimentos para Gatos Senior</a>
+                                    <h4><a href="gatosguabi.html">Alimentos para Gatos Senior</a>
                                     </h4>
                                     <p>Ração para gatos senior</p>
                                 </div>                            
