Fiz parte dos cachorros apra sabor & Vida

--- a/FeedControl/cachorrosSabor&Vida.html
+++ b/FeedControl/cachorrosSabor&Vida.html
@@ -74,7 +74,7 @@
 
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="banner" src="img/bannerCachorroEGato.jpg" alt="">
+                            <img class="banner" src="img/cachorrobanner.png" alt="">
                         </div>
 
                     </div>
@@ -96,7 +96,7 @@
                             <img src="img/cachorroSenior.png" alt="">
                         </div>
                         <div class="caption" >        
-                            <p> <a href="seniorGranPlus.html" target="_self" class="letrasGran">Sênior</a></p>
+                            <p> <a href="seniorSabor&Vida.html" target="_self" class="letrasSaborVida">Sênior</a></p>
 
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                         </div>
 
                         <div class="caption">
-                            <p> <a href="adultoGranPlus.html" target="_self" class="letrasGran">Adulto</a></p>
+                            <p> <a href="adultoSabor&Vida.html" target="_self" class="letrasSaborVida">Adulto</a></p>
 
                         </div>                            
                     </div>
@@ -121,7 +121,7 @@
                             <img src="img/cachorroFilhote.png" alt="">
                         </div>
                         <div class="caption">  
-                            <p ><a href="filhoteGranPlus.html" target="_self" class="letrasGran">Filhote</a></p>
+                            <p ><a href="filhoteSabor&Vida.html" target="_self" class="letrasSaborVida">Filhote</a></p>
 
                         </div>                            
                     </div>
