--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -79,7 +79,7 @@
                     <div class="list-group">
                         <a href="cachorrosEGato.html" class="list-group-item">Gran Plus </a>
                         <a href="cachorrosEGatoGuabi.html" class="list-group-item">Guabi Natural</a>
-                        <a href="cachorrosEGato.html" class="list-group-item">Sabor & Vida</a>
+                        <a href="cachorrosEGatoSabor&Vida.html" class="list-group-item">Sabor & Vida</a>
                         <a href="cachorrosEGato.html" class="list-group-item">Faro</a>
                         <a href="cachorrosEGato.html" class="list-group-item">Herói</a>
                         <a href="cachorrosEGato.html" class="list-group-item">Biriba</a>
@@ -129,7 +129,7 @@
                             <div class="thumbnail">
                                 <img src="img/cao_adulto.jpg" alt="">
                                 <div class="caption">           
-                                    <h4><a href="adulto.html">Alimentos para Cães Adultos</a>
+                                    <h4><a href="adultoGeral.html">Alimentos para Cães Adultos</a>
                                     </h4>
                                     <p>Ração para cães adultos</div>
 
@@ -140,7 +140,7 @@
                             <div class="thumbnail">
                                 <img src="img/cao_filhote.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="filhote.html">Alimentos para Cães Filhotes</a>
+                                    <h4><a href="filhoteGeral.html">Alimentos para Cães Filhotes</a>
                                     </h4>
                                     <p>Ração para cães filhotes</p>
                                 </div>                            
@@ -151,7 +151,7 @@
                             <div class="thumbnail">
                                 <img src="img/cao_senior.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="senior.html">Alimentos para Cães Senior</a>
+                                    <h4><a href="seniorGeral.html">Alimentos para Cães Senior</a>
                                     </h4>
                                     <p>Ração para cães senior</p>
                                 </div>                            
@@ -162,7 +162,7 @@
                             <div class="thumbnail">
                                 <img src="img/gato_adulto.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="gatosguabi.html">Alimentos para Gatos Adultos</a>
+                                    <h4><a href="gatosGuabi.html">Alimentos para Gatos Adultos</a>
                                     </h4>
                                     <p>Ração para gatos adultos</p>
                                 </div>                            
@@ -173,7 +173,7 @@
                             <div class="thumbnail">
                                 <img src="img/gato_filhote.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="gatosguabi.html">Alimentos para Gatos Filhotes</a>
+                                    <h4><a href="gatosGuabi.html">Alimentos para Gatos Filhotes</a>
                                     </h4>
                                     <p>Ração para gatos filhotes</p>
                                 </div>                            
@@ -184,7 +184,7 @@
                             <div class="thumbnail">
                                 <img src="img/gato_senior.jpg" alt="">
                                 <div class="caption">                              
-                                    <h4><a href="gatosguabi.html">Alimentos para Gatos Senior</a>
+                                    <h4><a href="gatosGuabi.html">Alimentos para Gatos Senior</a>
                                     </h4>
                                     <p>Ração para gatos senior</p>
                                 </div>                            
