--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -62,6 +62,9 @@
                         <li>
                             <a href="cidades.html">Cidades Atendidas</a>
                         </li>
+                        <li>
+                            <a href="#">Produtos</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
@@ -80,13 +83,10 @@
                         <a href="cachorrosEGato.html" class="list-group-item">Gran Plus </a>
                         <a href="cachorrosEGatoGuabi.html" class="list-group-item">Guabi Natural</a>
                         <a href="cachorrosEGatoSabor&Vida.html" class="list-group-item">Sabor & Vida</a>
-                        <a href="cachorrosEGato.html" class="list-group-item">Faro</a>
-                        <a href="cachorrosEGato.html" class="list-group-item">Herói</a>
-                        <a href="cachorrosEGato.html" class="list-group-item">Biriba</a>
-                        <a href="cachorrosEGato.html" class="list-group-item">Fiel</a>
-                       
-                        
-                        <a href="cachorros.html" class="list-group-item">Cachorro</a>            
+                        <a href="cachorrosFaro.html" class="list-group-item">Faro</a>
+                        <a href="cachorrosHeroi.html" class="list-group-item">Herói</a>
+                        <a href="adultoBiriba.html" class="list-group-item">Biriba</a>
+                        <a href="adultoFiel.html" class="list-group-item">Fiel</a>                                 
                     </div>
                 </div>
 
