--- a/FeedControl/adulto.html
+++ b/FeedControl/adulto.html
@@ -89,8 +89,8 @@
                 <div class="col-sm-4 col-lg-4 col-md-4">
                     <div class="thumbnail" style="border: 0;">
 
-                        <p class="tituloadulto">GUABI NATURAL</p>
-                        <p class="subtituloadulto"><b>CÃES ADULTOS PORTE GRANDES E GIGANTES</b></p>
+                        <h4 style="color: #995c00">GUABI NATURAL</h4>
+                        <h3 style="color: #985f0d"><b>CÃES ADULTOS PORTE GRANDES E GIGANTES</b></h3>
                         <div class="racao">
                             <img src="img/racaoadultoG.png" alt="">
                         </div>                      
