--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -13,7 +13,7 @@
 
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
-
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
         <!-- Custom CSS -->
         <link href="css/shop-homepage.css" rel="stylesheet">
         <!--<script src="app.js"></script>-->
