--- a/FeedControl/cidades.html
+++ b/FeedControl/cidades.html
@@ -26,7 +26,7 @@
 
     </head>
 
-    <body>
+    <body ng-controller="CidadesController">
 
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -68,10 +68,14 @@
 
         <div class="container" >
             <div class="row">
-                <div class="col-sm-1 col-lg-1 col-md-1">
-                    <footer>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3528.7025251825326!2d-50.34569268452909!3d-27.81892288274585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e01f56a7d7881f%3A0x3b105f266fa26288!2sR.+Val%C3%A9rio+Antunes%2C+1283+-+Copacabana%2C+Lages+-+SC%2C+88504-310!5e0!3m2!1spt-BR!2sbr!4v1492437884328" width="1100" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </footer>
+                <div  id="map" class="col-sm-1 col-lg-1 col-md-1">
+                    <!--                    <footer>
+                                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3528.7025251825326!2d-50.34569268452909!3d-27.81892288274585!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94e01f56a7d7881f%3A0x3b105f266fa26288!2sR.+Val%C3%A9rio+Antunes%2C+1283+-+Copacabana%2C+Lages+-+SC%2C+88504-310!5e0!3m2!1spt-BR!2sbr!4v1492437884328" width="1100" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                        </footer>-->
+
+                    <script async defer
+                            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtNwyAdA37_8FuYUNUHuNmG2e_o1zVdQM&callback=initMap()">
+                    </script>
 
                 </div>
             </div>
