mudificações em algumas paginas com css

--- a/FeedControl/index.html
+++ b/FeedControl/index.html
@@ -13,12 +13,24 @@
 
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
+
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
         <!-- Custom CSS -->
         <link href="css/shop-homepage.css" rel="stylesheet">
         <!--<script src="app.js"></script>-->
+        <!--
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+        
+        
+        <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+        </script>
+        -->
         <script src="js/controller.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"></script>
+
+        <script async defer
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9UvTqsa3HWttJpOUJPpecIHj_XGDsLoE&callback=initMap();">
+        </script>
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -70,6 +82,7 @@
                 <!-- /.navbar-collapse -->
             </div>
             <!-- /.container -->
+
         </nav>
 
         <!-- Page Content -->
@@ -196,12 +209,27 @@
             </div>
 
         </div>
+
+
+
+
         <!-- jQuery -->
         <script src="js/jquery.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
         <script src="js/bootstrap.min.js"></script>
+        <footer id="rodape">
+            <div class="conteudo">
+                <div class="bloco" id="primeiro" >
+                    <img src="img/logo.png">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                    tanto@tanto.com.br
+                </div>
+            </div>
+
+        </footer>
 
     </body>
+
 
 </html>
