--- a/FeedControl/vendedores.html
+++ b/FeedControl/vendedores.html
@@ -71,164 +71,189 @@
         <div class="row carousel-holder">
 
             <div class="col-md-12">
-                <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img class="slide-image" src="img/equipe.jpg" alt="">
-                        </div>
-
-                    </div>
-                </div>
-
+                <h1 class="nossaEquipe"> NOSSA EQUIPE</h1>
             </div>
         </div>
-
-
-
-
         <!-- até aqui -->
-
-
-        <div class="container">
-            <div class="col-md-9">
-                <font color="green"><h1 align="center"><b>Equipe de Vendedores</b></h1></font>            
+        <div class="container-fluid">
+            <div class="col-md-12">
+                <h1 class="equipe">Equipe de Vendedores</h1>            
                 <br>
                 <br>
             </div>
         </div>
-        <div class="container">
+        <div class="multidiciplinar">
+            <div class="container-fluid">            
+                <div class="row">
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail" style="border: 0;">
+                            <div class="multidiciplinar">
+                                <div class="thumb-vendedor">
+                                    <img src="img/vendedorH.png" alt="">
+                                </div>
+                                <div class="caption" >        
+                                    <p><b>Vendedor 1</b></p>
+                                    <p>Telefone:(49)00000-0000</p>
 
-            <div class="row">
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/vendedorH.png" alt="">
-                        </div>
-                        <div class="caption" >        
-                            <p><b>Vendedor 1</b></p>
-                            <p>Telefone:(49)00000-0000</p>
+                                </div>
+                            </div>
 
                         </div>
                     </div>
-                </div>
 
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail " style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/vendedor.jpg" alt="">
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail " style="border: 0;">
+                            <div class="multidiciplinar">
+                                <div class="thumb-vendedor">
+                                    <img src="img/vendedor.jpg" alt="">
+                                </div>
+                                <div class="caption">
+                                    <p><b>Vendedor 1</b></p>
+                                    <p>Telefone:(49)00000-0000</p>
+
+                                </div> 
+                            </div>
+
+
                         </div>
-
-                        <div class="caption">
-                            <p><b>Vendedor 1</b></p>
-                            <p>Telefone:(49)00000-0000</p>
-
-                        </div>                            
                     </div>
-                </div>
 
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/vendedorHomem.jpg" alt="">
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail" style="border: 0;">
+                            <div class="multidiciplinar">
+                                <div class="thumb-vendedor">
+                                    <img src="img/vendedorHomem.jpg" alt="">
+                                </div>
+                                <div class="caption">  
+                                    <p><b>Vendedor 1</b></p>
+                                    <p>Telefone:(49)00000-0000</p>
+
+                                </div>  
+                            </div>
                         </div>
-                        <div class="caption">  
-                            <p><b>Vendedor 1</b></p>
-                            <p>Telefone:(49)00000-0000</p>
-
-                        </div>                            
                     </div>
-                </div>
 
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/vendedora.png" alt="">
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail" style="border: 0;">
+                            <div class="multidiciplinar">
+                                <div class="thumb-vendedor">
+                                    <img src="img/vendedora.png" alt="">
+                                </div>
+                                <div class="caption">  
+                                    <p><b>Vendedor 1</b></p>
+                                    <p>Telefone:(49)00000-0000</p>
+
+                                </div>  
+                            </div>
                         </div>
-                        <div class="caption"> 
-                            <p><b>Vendedor 1</b></p>
-                            <p>Telefone:(49)00000-0000</p>                             
-
-                        </div>                            
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- Equipe multidiciplicar -->
-
-        <div class="container">
-            <div class="col-md-9">
-
-                <font color="green"><h1 align="center"><b>Equipe Multidisciplinar</b></h1></font>
+        <br>
                 <br>
                 <br>
-            </div>
-        </div>
-        <div class="container">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                
 
-            <div class="row">
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/vendedorH.png" alt="">
-                        </div>
-                        <div class="caption" >        
-                            <p><b>Fulano</b></p>
-                            <p>Administrativo</p>
+        <div class="container-fluid">
+            <div class="col-md-12">
 
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail " style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/vendedor.jpg" alt="">
-                        </div>
-
-                        <div class="caption">
-                            <p><b>Beltrano</b></p>
-                            <p>Carregador</p>
-
-                        </div>                            
-                    </div>
-                </div>
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/vendedora.png" alt="">
-                        </div>
-                        <div class="caption"> 
-                            <p><b>Belmira</b></p>
-                            <p>Secretaria</p>                             
-
-                        </div>                            
-                    </div>
-                </div>
-
-                <div class="col-sm-4 col-lg-4 col-md-4">
-                    <div class="thumbnail" style="border: 0;">
-                        <div class="thumb-vendedor">
-                            <img src="img/vendedora.png" alt="">
-                        </div>
-                        <div class="caption"> 
-                            <p><b>Josefina</b></p>
-                            <p>Administrativo</p>                             
-
-                        </div>                            
-                    </div>
-                </div>
+                <h1 class="equipe">Equipe Multidisciplinar</h1>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                
             </div>
         </div>
 
-        <!-- jQuery -->
-        <script src="js/jquery.js"></script>
+        <div class="multidiciplinar">
+            <div class="container-fluid">
 
-        <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
 
-    </body>
+
+                <div class="row">
+
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail" style="border: 0;">
+                            <div class="multidiciplinar">
+                                <div class="thumb-vendedor">
+                                    <img src="img/vendedorH.png" alt="">
+                                </div>
+                                <div class="caption" >        
+                                    <p><b>Fulano</b></p>
+                                    <p>Administrativo</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail " style="border: 0;">
+                            <div class="multidiciplinar">
+                                <div class="thumb-vendedor">
+                                    <img src="img/vendedor.jpg" alt="">
+                                </div>
+
+                                <div class="caption">
+                                    <p><b>Beltrano</b></p>
+                                    <p>Carregador</p>
+                                </div>  
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4 col-lg-4 col-md-4">
+                        <div class="thumbnail" style="border: 0;">
+                            <div class="multidiciplinar">
+                                <div class="thumb-vendedor">
+                                    <img src="img/vendedora.png" alt="">
+                                </div>
+                                <div class="caption"> 
+                                    <p><b>Belmira</b></p>
+                                    <p>Secretaria</p> 
+                                </div> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4 col-lg-4 col-md-4">
+                    <div class="thumbnail" style="border: 0;">
+                        <div class="multidiciplinar">
+                            <div class="thumb-vendedor">
+                                <img src="img/vendedora.png" alt="">
+                            </div>
+                            <div class="caption"> 
+                                <p><b>Josefina</b></p>
+                                <p>Administrativo</p>  
+                            </div> 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+</body>
 
 </html>
